Font size correct

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         <section class="banner" id="banner">
             <h1>FHTU SEBA</h1>
-            <h2>TRANSPORT SPEDYCJA LOGISTYKA</h2>
+            <h2 class="animated-text">TRANSPORT SPEDYCJA LOGISTYKA</h2>
             <a href="#gallery">GALERIA</a>
         </section>
 
@@ -68,7 +68,7 @@
                 <h2 class="section-title">FIRMA</h2>
                 <div class="about-firma">
                     <div class="about-description">
-                        <p>Od 2004 roku nasza firma z powodzeniem działa na rynku usług TSL. Oprócz standardowych naczep typu firanka 13,6 m / 24 t posiadamy również wanny 45 m3 do przewozu materiałów sypkich oraz samochody z zamontowanymi dźwigami HDS. W ostatnim czasie poszerzyliśmy tabor o naczepy typu coil-mulde, co pozwala nam realizować specjalistyczne transporty stali. To wszystko w połączeniu z doświadczeniem naszych spedytorów oraz kierowców pozwala nam sprostać najbardziej nawet wymagającym klientom i zadaniom. Posiadamy nowoczesny i ekologiczny tabor, który spełnia najostrzejsze normy ochrony środowiska EURO-6. Zajmujemy się przewozem towarów, spedycją drogową krajową i międzynarodową oraz logistyką. W swoim zasięgu mamy całą Europę.</p>
+                        <p>Od 2004 roku nasza firma z powodzeniem działa na rynku usług TSL. Oprócz standardowych naczep typu firanka 13,6 m / 24 t posiadamy również wanny 45 m<sup>3</sup> do przewozu materiałów sypkich oraz samochody z zamontowanymi dźwigami HDS. W ostatnim czasie poszerzyliśmy tabor o naczepy typu coil-mulde, co pozwala nam realizować specjalistyczne transporty stali. To wszystko w połączeniu z doświadczeniem naszych spedytorów oraz kierowców pozwala nam sprostać najbardziej nawet wymagającym klientom i zadaniom. Posiadamy nowoczesny i ekologiczny tabor, który spełnia najostrzejsze normy ochrony środowiska EURO-6. Zajmujemy się przewozem towarów, spedycją drogową krajową i międzynarodową oraz logistyką. W swoim zasięgu mamy całą Europę.</p>
                     </div>
                     <div class="about-photo">
                         <img src="img/driver.jpg" alt="driver">
